--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ import(checkmate)
 import(dplyr)
 import(ggplot2)
 import(methods)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(purrr,accumulate)
