--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,15 @@ export("%>%")
 export(getCoefficients)
 export(mcreg)
 export(printSummary)
+export(size_ci_one_prop)
+export(size_one_prop)
 import(checkmate)
 import(dplyr)
 import(ggplot2)
 import(mcr)
 import(methods)
+importFrom(DescTools,BinomCI)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(purrr,accumulate)
+importFrom(stats,uniroot)
