add sample size function for quantitative trials

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export("%>%")
 export(getCoefficients)
 export(mcreg)
 export(printSummary)
+export(size_ci_corr)
 export(size_ci_one_prop)
+export(size_corr)
 export(size_one_prop)
 import(checkmate)
 import(dplyr)
