add test and check all

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,5 @@ importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(purrr,accumulate)
 importFrom(purrr,map_chr)
+importFrom(stats,qnorm)
 importFrom(stats,uniroot)
