modify roxygen2 document for samplesize functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,10 +15,9 @@ import(dplyr)
 import(ggplot2)
 import(mcr)
 import(methods)
+import(stats)
 importFrom(DescTools,BinomCI)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(purrr,accumulate)
 importFrom(purrr,map_chr)
-importFrom(stats,qnorm)
-importFrom(stats,uniroot)
