--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,22 +2,25 @@
 
 export("%>%")
 export(cat_with_newline)
+export(diagTab)
 export(getCoefficients)
+export(h_factor)
 export(mcreg)
 export(printSummary)
 export(size_ci_corr)
 export(size_ci_one_prop)
 export(size_corr)
 export(size_one_prop)
-exportMethods(show)
+exportMethods(summary)
 import(checkmate)
 import(dplyr)
 import(ggplot2)
 import(mcr)
 import(methods)
-import(stats)
 importFrom(DescTools,BinomCI)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(purrr,accumulate)
 importFrom(purrr,map_chr)
+importFrom(stats,qnorm)
+importFrom(stats,uniroot)
