modify functions and add class validation and function tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(size_ci_corr)
 export(size_ci_one_prop)
 export(size_corr)
 export(size_one_prop)
-exportMethods(summary)
+exportMethods(getAccuracy)
 import(checkmate)
 import(dplyr)
 import(ggplot2)
