style and check all branch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,4 +23,5 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,accumulate)
 importFrom(purrr,map_chr)
 importFrom(stats,qnorm)
+importFrom(stats,terms)
 importFrom(stats,uniroot)
