--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,7 @@ VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Collate: 
+    'blandAltman.R'
     'data.R'
     'mcr.R'
     'package.R'
