add helper function to format numeric data into character

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(diagTab)
 export(getCoefficients)
 export(h_difference)
 export(h_factor)
+export(h_fmt_est)
+export(h_fmt_num)
 export(h_summarize)
 export(mcreg)
 export(printSummary)
