add blandAltman function and method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(h_difference)
 export(h_factor)
 export(h_fmt_est)
 export(h_fmt_num)
+export(h_fmt_range)
 export(h_summarize)
 export(mcreg)
 export(printSummary)
