--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,15 +22,17 @@ export(size_one_prop)
 exportMethods(getAccuracy)
 exportMethods(getOutlier)
 import(checkmate)
-import(dplyr)
 import(ggplot2)
 import(mcr)
 import(methods)
 importFrom(DescTools,BinomCI)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
-importFrom(purrr,accumulate)
 importFrom(purrr,map_chr)
+importFrom(stats,complete.cases)
+importFrom(stats,na.omit)
 importFrom(stats,qnorm)
+importFrom(stats,qt)
+importFrom(stats,quantile)
 importFrom(stats,terms)
 importFrom(stats,uniroot)
