--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,13 @@ export(h_fmt_num)
 export(h_fmt_range)
 export(h_summarize)
 export(mcreg)
+export(pearsonTest)
 export(printSummary)
 export(size_ci_corr)
 export(size_ci_one_prop)
 export(size_corr)
 export(size_one_prop)
+export(spearmanTest)
 exportMethods(getAccuracy)
 exportMethods(getOutlier)
 import(checkmate)
@@ -26,13 +28,17 @@ import(ggplot2)
 import(mcr)
 import(methods)
 importFrom(DescTools,BinomCI)
+importFrom(boot,boot)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map_chr)
 importFrom(stats,complete.cases)
+importFrom(stats,cor.test)
 importFrom(stats,na.omit)
+importFrom(stats,pnorm)
 importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,quantile)
+importFrom(stats,setNames)
 importFrom(stats,terms)
 importFrom(stats,uniroot)
