wrap calcBias function from mcr package and add tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(ESD_test)
 export(blandAltman)
+export(calcBias)
 export(cat_with_newline)
 export(diagTab)
 export(esd.critical)
