--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mcradds
 Type: Package
 Title: Processing and analyzing of In Vitro Diagnostic Data
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: c(
     person("Kai", "Gu", , "gukai1212@163.com", role = c("aut", "cre"))
     )
@@ -12,7 +12,7 @@ Description: A complement to 'mcr' package, adding methods and functions to
     Most of the methods and algorithms refer to CLSI recommendations. In 
     additional, relevant plots are constructed by ggplot statement.
 License: GPL (>= 3)
-URL: https://github.com/kaigu1990/mcradds/
+URL: https://github.com/kaigu1990/mcradds/, https://kaigu1990.github.io/mcradds/
 BugReports: https://github.com/kaigu1990/mcradds/issues
 Encoding: UTF-8
 LazyData: true
