add tukey and dixon functions to detect outliers in reference range

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(blandAltman)
 export(calcBias)
 export(cat_with_newline)
 export(diagTab)
+export(dixon_outlier)
 export(esd.critical)
 export(getCoefficients)
 export(h_difference)
@@ -22,6 +23,7 @@ export(size_ci_one_prop)
 export(size_corr)
 export(size_one_prop)
 export(spearmanTest)
+export(tukey_outlier)
 exportMethods(getAccuracy)
 exportMethods(getOutlier)
 import(checkmate)
