add calcium example data and robust and nonpar methods of RI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,10 @@ export(h_fmt_num)
 export(h_fmt_range)
 export(h_summarize)
 export(mcreg)
+export(nonparRI)
 export(pearsonTest)
 export(printSummary)
+export(robustRI)
 export(size_ci_corr)
 export(size_ci_one_prop)
 export(size_corr)
