--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(mcreg)
 export(nonparRI)
 export(pearsonTest)
 export(printSummary)
+export(refInterval)
 export(robustRI)
 export(size_ci_corr)
 export(size_ci_one_prop)
@@ -34,6 +35,7 @@ import(mcr)
 import(methods)
 importFrom(DescTools,BinomCI)
 importFrom(boot,boot)
+importFrom(boot,boot.ci)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map_chr)
