--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,map_chr)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
+importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,pnorm)
 importFrom(stats,qnorm)
