add precision design and example dataset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,8 @@ import(ggplot2)
 import(mcr)
 import(methods)
 importFrom(DescTools,BinomCI)
+importFrom(VCA,VCAinference)
+importFrom(VCA,anovaVCA)
 importFrom(boot,boot)
 importFrom(boot,boot.ci)
 importFrom(lifecycle,deprecated)
