--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(ESD_test)
 export(VCAinference)
 export(anovaVCA)
+export(aucTest)
 export(blandAltman)
 export(calcBias)
 export(cat_with_newline)
@@ -42,6 +43,9 @@ importFrom(boot,boot)
 importFrom(boot,boot.ci)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
+importFrom(pROC,cov)
+importFrom(pROC,roc)
+importFrom(pROC,var)
 importFrom(purrr,map_chr)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
