add aucTest related tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(boot,boot)
 importFrom(boot,boot.ci)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
+importFrom(pROC,ci.auc)
 importFrom(pROC,cov)
 importFrom(pROC,roc)
 importFrom(pROC,var)
