--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ importFrom(pROC,cov)
 importFrom(pROC,roc)
 importFrom(pROC,var)
 importFrom(purrr,map_chr)
+importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
 importFrom(stats,median)
@@ -59,3 +60,4 @@ importFrom(stats,quantile)
 importFrom(stats,setNames)
 importFrom(stats,terms)
 importFrom(stats,uniroot)
+importFrom(utils,combn)
