--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mcradds
 Type: Package
 Title: Processing and analyzing of In Vitro Diagnostic Data
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: c(
     person("Kai", "Gu", , "gukai1212@163.com", role = c("aut", "cre"))
     )
@@ -9,8 +9,8 @@ Maintainer: Kai Gu <gukai1212@163.com>
 Description: A complement to 'mcr' package, adding methods and functions to 
     analyze the quantitative or qualitative performance for diagnostic tests. 
     And outliers detection, reader precision and reference range are discussed. 
-    Most of the methods and algorithms refer to CLSI recommendations. In 
-    additional, relevant plots are constructed by ggplot statement.
+    Most of the methods and algorithms refer to CLSI recommendations and NMPA 
+    guidelines. In additional, relevant plots are constructed by ggplot statements.
 License: GPL (>= 3)
 URL: https://github.com/kaigu1990/mcradds/, https://kaigu1990.github.io/mcradds/
 BugReports: https://github.com/kaigu1990/mcradds/issues
