add autoplot for BAsummary class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(size_corr)
 export(size_one_prop)
 export(spearmanTest)
 export(tukey_outlier)
+exportMethods(autoplot)
 exportMethods(getAccuracy)
 exportMethods(getOutlier)
 import(checkmate)
