--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,9 @@ VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Collate: 
+    'pkg_class.R'
+    'pkg_methods.R'
+    'autoplot.R'
     'blandAltman.R'
     'correlation.R'
     'data.R'
@@ -50,8 +53,6 @@ Collate:
     'outlier.R'
     'package.R'
     'pairedroc.R'
-    'pkg_class.R'
-    'pkg_methods.R'
     'qual_stat.R'
     'referenceInterval.R'
     'samplesize.R'
