--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,8 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     tibble,
-    usethis
+    usethis,
+    vdiffr
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
