--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: A complement to 'mcr' package, adding methods and functions to
     analyze the quantitative or qualitative performance for diagnostic assays. 
     And outliers detection, reader precision and reference range are discussed. 
     Most of the methods and algorithms refer to CLSI recommendations and NMPA 
-    guidelines. In additional, relevant plots are constructed by ggplot statements.
+    guidelines. In additional, relevant plots are constructed by ggplot2 statements.
 License: GPL (>= 3)
 URL: https://github.com/kaigu1990/mcradds, https://kaigu1990.github.io/mcradds/
 BugReports: https://github.com/kaigu1990/mcradds/issues
@@ -35,6 +35,7 @@ Suggests:
     dplyr,
     knitr,
     rmarkdown,
+    spelling,
     testthat (>= 3.0.0),
     tibble,
     usethis,
@@ -59,3 +60,4 @@ Collate:
     'samplesize.R'
     'utils.R'
     'vca.R'
+Language: en-US
