add `MCR` class to relace `MCResult` in case of `mcr` is not available

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(h_fmt_num)
 export(h_fmt_range)
 export(h_summarize)
 export(mcreg)
+export(mcreg2)
 export(nonparRI)
 export(pearsonTest)
 export(printSummary)
@@ -35,7 +36,6 @@ exportMethods(getAccuracy)
 exportMethods(getOutlier)
 import(checkmate)
 import(ggplot2)
-import(mcr)
 import(methods)
 importFrom(DescTools,BinomCI)
 importFrom(VCA,VCAinference)
