make the functions relevant to mcr package refreshed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,18 +6,22 @@ export(VCAinference)
 export(anovaVCA)
 export(aucTest)
 export(blandAltman)
+export(calcBias)
 export(cat_with_newline)
 export(diagTab)
 export(dixon_outlier)
 export(esd.critical)
+export(getCoefficients)
 export(h_difference)
 export(h_factor)
 export(h_fmt_est)
 export(h_fmt_num)
 export(h_fmt_range)
 export(h_summarize)
+export(mcreg)
 export(nonparRI)
 export(pearsonTest)
+export(printSummary)
 export(refInterval)
 export(robustRI)
 export(size_ci_corr)
@@ -31,6 +35,7 @@ exportMethods(getAccuracy)
 exportMethods(getOutlier)
 import(checkmate)
 import(ggplot2)
+import(mcr)
 import(methods)
 importFrom(DescTools,BinomCI)
 importFrom(VCA,VCAinference)
