add kappa calculation to getAccuracy method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ import(ggplot2)
 import(mcr)
 import(methods)
 importFrom(DescTools,BinomCI)
+importFrom(DescTools,CohenKappa)
 importFrom(VCA,VCAinference)
 importFrom(VCA,anovaVCA)
 importFrom(boot,boot)
