add descfreq function and adsl_sub example dataset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,14 @@ export(aucTest)
 export(blandAltman)
 export(calcBias)
 export(cat_with_newline)
+export(descfreq)
 export(diagTab)
 export(dixon_outlier)
 export(esd.critical)
 export(getCoefficients)
 export(h_difference)
 export(h_factor)
+export(h_fmt_count_perc)
 export(h_fmt_est)
 export(h_fmt_num)
 export(h_fmt_range)
@@ -43,6 +45,7 @@ importFrom(VCA,VCAinference)
 importFrom(VCA,anovaVCA)
 importFrom(boot,boot)
 importFrom(boot,boot.ci)
+importFrom(formatters,format_value)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(pROC,ci.auc)
