--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,8 @@ Imports:
     boot,
     checkmate,
     DescTools,
+    dplyr,
+    formatters,
     ggplot2,
     lifecycle,
     magrittr,
@@ -31,14 +33,14 @@ Imports:
     pROC,
     purrr,
     stats,
+    tibble,
+    tidyr,
     VCA
 Suggests: 
-    dplyr,
     knitr,
     rmarkdown,
     spelling,
     testthat (>= 3.0.0),
-    tibble,
     usethis,
     vdiffr
 Config/testthat/edition: 3
@@ -52,6 +54,7 @@ Collate:
     'blandAltman.R'
     'correlation.R'
     'data.R'
+    'desc.R'
     'mcr.R'
     'outlier.R'
     'package.R'
