add descvar function and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(blandAltman)
 export(calcBias)
 export(cat_with_newline)
 export(descfreq)
+export(descvar)
 export(diagTab)
 export(dixon_outlier)
 export(esd.critical)
@@ -53,6 +54,7 @@ importFrom(pROC,cov)
 importFrom(pROC,roc)
 importFrom(pROC,var)
 importFrom(purrr,map_chr)
+importFrom(rlang,sym)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
