--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,8 @@ importFrom(pROC,cov)
 importFrom(pROC,roc)
 importFrom(pROC,var)
 importFrom(purrr,map_chr)
+importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(rlang,sym)
 importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
@@ -64,6 +66,7 @@ importFrom(stats,pnorm)
 importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,quantile)
+importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,terms)
 importFrom(stats,uniroot)
